# Portfolio

KoloFortuny/: CMakeLists.txt  README.md
KoloFortuny/forms/: mainwindow.ui
KoloFortuny/include/: color.h  customopenglwidget.h  dataloader.h  engine.h  fuel.h  glwheeloffortune.h  mainwindow.h  qtdataloader.h  qtwheeloffortune.h  settings.h  tinydataloader.h  wheeloffortune.h
KoloFortuny/resources/data/: Angielski.xml  Cwiczenia.xml  CzasWolny — kopia.xml  Default16.xml  Default24.xml  Obowiazki.xml
KoloFortuny/src/: color.cpp  customopenglwidget.cpp  engine.cpp  fuel.cpp  glwheeloffortune.cpp  mainwindow.cpp  qtdataloader.cpp  qtwheeloffortune.cpp  settings.cpp  tinydataloader.cpp  wheeloffortune.cpp
QML_HUD/: CMakeLists.txt  README.md  abcontrol.cpp  abcontrol.h  darkTheme.json  documentation.qml  gauge.cpp  gauge.h  hboard.cpp  hboard.h  lightTheme.json  main.cpp  main.qml  utilities.h  vbar.cpp  vbar.h
WheelOfFortune/: CMakeLists.txt  README.md
WheelOfFortune/forms/: mainwindow.ui  settings.ui
WheelOfFortune/include/: RangeSlider.h  color.h  customopenglwidget.h  dataloader.h  dataprovider.h  engine.h  fuel.h  global.h  glwheeloffortune.h  logger.h  mainwindow.h  qtdataloader.h  qtwheeloffortune.h  settings.h  settingsmanager.h  settingswidget.h  stb_image.h  tinydataloader.h  tinyxml2.h  wheeloffortune.h
WheelOfFortune/resources/: resources.qrc
WheelOfFortune/resources/data/: CzasWolny.xml  Default.xml  Default16.xml  Default16B.xml  Default2.xml  Default26.xml  Default3.xml  DefaultPL.xml  FreeTime.xml
WheelOfFortune/src/: RangeSlider.cpp  color.cpp  customopenglwidget.cpp  dataprovider.cpp  engine.cpp  fuel.cpp  glwheeloffortune.cpp  logger.cpp  main.cpp  mainwindow.cpp  qtdataloader.cpp  qtwheeloffortune.cpp  settings.cpp  settingsmanager.cpp  settingswidget.cpp  tinydataloader.cpp  tinyxml2.cpp  wheeloffortune.cpp
